--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,18 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://opencommunities.info" />
+	<meta property="og:title" content="Open Communities · Pro-Ceasefire Jewish Congregations" />
+	<meta property="og:description"
+		content="Celebrate the High Holidays with an inclusive, peace-supporting Jewish community." />
+	<meta property="og:image" content="https://opencommunities.info/openCommunitiesSocial.png" />
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://opencommunities.info" />
+	<meta property="twitter:title" content="Open Communities · Pro-Ceasefire Jewish Congregations" />
+	<meta property="twitter:description"
+		content="Celebrate the High Holidays with an inclusive, peace-supporting Jewish community." />
+	<meta property="twitter:image" content="https://opencommunities.info/openCommunitiesSocial.png" />
 	<link rel="icon" href="/favicon.ico" />
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
